--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "tightenco/ziggy": "^1.5"
+        "tightenco/ziggy": "^1.5",
+      "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
