Running in production

--- a/html/mix-manifest.json
+++ b/html/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=dfc91609e70c09870ba801e4e018d762",
+    "/css/app.css": "/css/app.css?id=0265422340dae1c5b01906512e5534ed"
 }
