--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "dependencies": {
         "@ckeditor/ckeditor5-build-classic": "^37.1.0",
         "@ckeditor/ckeditor5-vue2": "^3.0.1",
-        "v-select2-component": "^0.4.7"
+        "chart.js": "^4.3.0",
+        "v-select2-component": "^0.4.7",
+        "vue-chartjs": "^5.2.0"
     }
 }
