--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@ckeditor/ckeditor5-build-classic": "^37.1.0",
         "@ckeditor/ckeditor5-vue2": "^3.0.1",
         "chart.js": "^4.3.0",
+        "mdbvue": "^6.7.4",
         "v-select2-component": "^0.4.7",
         "vue-chartjs": "^5.2.0"
     }
