--- a/html/mix-manifest.json
+++ b/html/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=5da40e1928e61ee6f9e8a40ad755b4cc",
+    "/css/app.css": "/css/app.css?id=334c63412d4f40fe7b48f998a36c5787"
 }
