--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "chart.js": "^4.3.0",
         "mdbvue": "^6.7.4",
         "v-select2-component": "^0.4.7",
-        "vue-chartjs": "^5.2.0"
+        "vue-chartjs": "^5.2.0",
+        "vue-localstorage": "^0.6.2"
     }
 }
