--- a/html/mix-manifest.json
+++ b/html/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=03404f9b9795c4d58a8fe9e84f027cf9",
+    "/css/app.css": "/css/app.css?id=334c63412d4f40fe7b48f998a36c5787"
 }
