--- a/html/mix-manifest.json
+++ b/html/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=c5ed6bd6b1042f158bafbaf4b3e8750a",
-    "/css/app.css": "/css/app.css?id=334c63412d4f40fe7b48f998a36c5787"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
