UI Changes - Recipe Calculator

--- a/html/mix-manifest.json
+++ b/html/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=9c16c5fe61cbe738e7f58a7fd86f37b7",
-    "/css/app.css": "/css/app.css?id=334c63412d4f40fe7b48f998a36c5787"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
