--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "@ckeditor/ckeditor5-vue2": "^3.0.1",
         "chart.js": "^4.3.0",
         "mdbvue": "^6.7.4",
+        "swiper": "^11.1.9",
         "v-select2-component": "^0.4.7",
         "vue-chartjs": "^5.2.0",
         "vue-localstorage": "^0.6.2"
