--- a/html/mix-manifest.json
+++ b/html/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=8c8e61f46f54636a6f166f794ef979c2",
+    "/css/app.css": "/css/app.css?id=33ad33553c501924a4940a1b35ac575e"
 }
